# pds-testes-tecnicos

./: .gitignore  README.md  pytest.ini
SistemaEntrega/: __init__.py  main.py  manage.py
automation-store/: Makefile  README.md  manage.py  pytest.ini
twitter-api/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
twitter-api/app/: pytest.ini
twitter-api/app/core/: api.py  middleware.py  models.py  schemas.py  selects.py  services.py  validators.py
twitter-api/app/core/management/commands/: wait_for_db.py
twitter-api/app/core/migrations/: 0001_initial.py  0002_post.py  0003_user_following.py
twitter-api/app/data/: db.json
twitter-api/app/main/: settings.py  urls.py
twitter-api/app/tests/: conftest.py
twitter-api/app/tests/api/: test_create_post.py  test_create_quote.py  test_create_repost.py  test_follow.py  test_posts.py  test_unfollow.py  test_user.py  test_user_posts.py
twitter-api/app/tests/models/: test_post.py  test_user.py
twitter-api/app/tests/schemas/: test_post_in_schema.py  test_quote_post_in_schema.py
twitter-api/app/tests/selects/: test_is_following.py  test_posts.py  test_user_data.py  test_user_posts.py
twitter-api/app/tests/services/: test_can_follow.py  test_can_post.py  test_create_post.py  test_create_quote_post.py  test_create_repost.py  test_follow_user.py  test_is_following.py  test_posts.py  test_posts_for.py  test_unfollow_user.py
twitter-api/app/tests/validators/: test_can_follow.py  test_can_post.py
twitter-api/scripts/: entrypoint.sh
(+56 files in other folders)
