[tool.poetry]
authors = ["Fernando Rodrigues <devfernandorodrigues@gmail.com>"]
description = "Back-end assessment"
name = "back-end-assessment"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
django-ninja = "^0.17.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
ipython = "^8.2.0"
model-bakery = "^1.5.0"
Faker = "^13.3.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
